Almost 1 year since last commit! * Added client config ini file to set debug/serverlist/etc so it doesn't need to be hardcoded. * Updated a few more occurrences of Pokemonium -> Pokemon Destiny.
Signed-off-by: Akkarinage <akkarin@rathena.org>

--- a/res/language/english/UI/_LOGIN.txt
+++ b/res/language/english/UI/_LOGIN.txt
@@ -1,4 +1,4 @@
-Pokemonium Server Selection
+Pokemon Destiny Server Selection
 Note: Your account will work on all servers
 Private Server
 About
@@ -7,7 +7,7 @@ Username:
 Password:
 Login
 Register
-Pokemonium Registration
+Pokemon Destiny Registration
 Confirm Password:
 D.O.B. (dd/mm/yyyy):
 Email:
@@ -32,7 +32,7 @@ Not a valid email.
 Passwords do not match.
 Username must have at least 4 characters and no more than 12.
 1. No swearing./n2. No spamming./n3. One account per person./n4. No scamming./n5. Do not talk in all capitals./n6. No botting./n7. No hacking./n/nBreaking any of these rules may/nresult in a ban. We would also like/nour members to note that thisis a/nbeta release, your account may be/ndeleted at anytime to facilitate improvements. Any bugs or issues should be reported to developers.
-About Pokemonium
+About Pokemon Destiny
 Pokemonium is a free, non-profit, open-source Pokemon MMORPG. 
 Pokemonium is in no way affiliated with or officially supported by Nintendo.
 Pokemon is a registered trademark of Nintendo (1995 - Present)./n/n
