--- a/res/language/english/UI/_GUI.txt
+++ b/res/language/english/UI/_GUI.txt
@@ -18,13 +18,13 @@ Full Screen view
 Mute
 Save
 Changes may not take effect until you restart.
-Pokenet Help
+Pokemon Destiny Help
 Arrow keys or WASD keys/nMovement/n/n
 Spacebar or E/nTalk/n/n
 Right-click/nInteract with other players/n/n
 Use the whisper option to start a private chat. Use /local to chat locally./n
 Type the /playercount command into chat to see how many players are online./n
-For more information, go to www.pokemonium.net
+For more information, go to github.com/industrial-illusions
 Chat: Global
 You must accept Terms of Service (ToS) before registering.
 Male
