--- a/res/language/english/UI/_LOGIN.txt
+++ b/res/language/english/UI/_LOGIN.txt
@@ -1,6 +1,6 @@
 Pokemon Destiny Server Selection
 Note: Your account will work on all servers
-Private Server
+Other Server
 About
 ToS
 Username:
@@ -33,10 +33,10 @@ Passwords do not match.
 Username must have at least 4 characters and no more than 12.
 1. No swearing./n2. No spamming./n3. One account per person./n4. No scamming./n5. Do not talk in all capitals./n6. No botting./n7. No hacking./n/nBreaking any of these rules may/nresult in a ban. We would also like/nour members to note that thisis a/nbeta release, your account may be/ndeleted at anytime to facilitate improvements. Any bugs or issues should be reported to developers.
 About Pokemon Destiny
-Pokemonium is a free, non-profit, open-source Pokemon MMORPG. 
-Pokemonium is in no way affiliated with or officially supported by Nintendo.
+Pokemon Destiny is a free, non-profit, open-source Pokemon MMORPG. 
+Pokemon Destiny is in no way affiliated with or officially supported by Nintendo.
 Pokemon is a registered trademark of Nintendo (1995 - Present)./n/n
 Contributors:
--chappie112, sadhi, Remyoman, Myth1c, XtremeJedi, DefaulT, Fshy, ZombieBear, Ryan, Pivot,/nIlentcape, Sienide, TMKCodes, Drawig,/nLordAdmiral, Psycho, Dragina,/nOblivion, Lastplacer, Firefly17, Gama,/nJacobe, Latias, Callagan, xkendrickx,/nMewtwo, PheonixClaw, JayJay, May, Nushio, PokeRemixStudio
+-chappie112, sadhi, Remyoman, Myth1c, XtremeJedi, DefaulT, Fshy, ZombieBear, Ryan, Pivot,/nIlentcape, Sienide, TMKCodes, Drawig,/nLordAdmiral, Psycho, Dragina,/nOblivion, Lastplacer, Firefly17, Gama,/nJacobe, Latias, Callagan, xkendrickx,/nMewtwo, PheonixClaw, JayJay, May, Nushio, PokeRemixStudio,/nAkkarinage
 You have been disconnected from the game server.
 The e-mail address you have entered is already in use.
